--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>polanco inventario</title>
   </head>
   <style>
-    input[type=text],input[type=password],input[type=email]{
+    input[type=text],input[type=password],input[type=email], input[type=number]{
       margin-bottom:10px;
     }
   </style>
